// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unirest > 'adds basic auth credentials' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Authorization", "Basic dXNlcjpwYXNz")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'doesn\\'t add empty cookies' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'doesn\\'t add empty headers' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'escapes single quotes in JSON body' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("\\"hell'o\\"".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://editor.scalar.com/test")
  .header("Content-Type", "application/json")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles JSON body with special charac…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"key\\":\\"\\\\\\"quotes\\\\\\" and \\\\\\\\backslashes\\\\\\\\\\",\\"nested\\":{\\"array\\":[\\"item1\\",null,null]}}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/json")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles URLs with dollar sign charact…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/path$with$dollars")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles URLs with dollar signs in pat…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/api$v1/prices?amount=%2450.00")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles URLs with dollar signs in que…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com?price=%24100&currency=USD%24")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles binary data flag' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("binary content".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/octet-stream")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles compressed response' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Accept-Encoding", "gzip, deflate")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles cookies with special characte…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Cookie", "special%3Bcookie=value%20with%20spaces")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles empty URL' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles extremely long URLs' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles headers with empty values' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("X-Empty", "")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data content t…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"user\\"\\r\\nContent-Type: application/json;charset=utf-8\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("{\\"name\\":\\"scalar\\"}".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data content t…' 2`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"file\\"; filename=\\"test.txt\\"\\r\\nContent-Type: text/plain\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write(java.nio.file.Files.readAllBytes(java.nio.file.Path.of("test.txt")));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data with JSON…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"foo\\":\\"bar\\"}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data with empt…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"file\\"; filename=\\"\\"\\r\\nContent-Type: application/octet-stream\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write(java.nio.file.Files.readAllBytes(java.nio.file.Path.of("")));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data with files' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"file\\"; filename=\\"test.txt\\"\\r\\nContent-Type: application/octet-stream\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write(java.nio.file.Files.readAllBytes(java.nio.file.Path.of("test.txt")));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"field\\"\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("value".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multipart form data with sing…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"field'name\\"\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("value".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"file'name\\"; filename=\\"test.txt\\"\\r\\nContent-Type: application/octet-stream\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write(java.nio.file.Files.readAllBytes(java.nio.file.Path.of("test.txt")));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles multiple headers with same na…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("X-Custom", "value1")
  .header("X-Custom", "value2")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles special characters in URL' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/path%20with%20spaces/[brackets]")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles special characters in auth cr…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Authorization", "Basic dXNlckBleGFtcGxlLmNvbTpwYXNzOndvcmQh")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles special characters in query p…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com?q=hello%20world%20%26%20more&special=!%40%23%24%25%5E%26*()")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles undefined auth object' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles url-encoded form data with si…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("field%27name=value".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/x-www-form-urlencoded")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'handles url-encoded form data with sp…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("special+chars%21%40%23=value".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/x-www-form-urlencoded")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'has JSON body' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"hello\\":\\"world\\"}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/json")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'has cookies' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Cookie", "foo=bar; bar=foo")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'has headers' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .header("Content-Type", "application/json")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'has query string' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com?foo=bar&bar=foo")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'joins query string parameters with & …' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/api?existing=1&foo=bar")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'leaves non-JSON multipart values unto…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"props\\"\\r\\nContent-Type: application/json\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("not json".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'omits auth when not provided' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'omits auth when password is missing' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'omits auth when username is missing' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'prettifies JSON body' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"nested\\":{\\"array\\":[1,2,3],\\"object\\":{\\"foo\\":\\"bar\\"}},\\"simple\\":\\"value\\"}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/json")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'pretty-prints --data bodies whose mim…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"a\\":1}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/vnd.api+json")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'pretty-prints --data bodies whose mim…' 2`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("{\\"a\\":1}".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "application/json;charset=utf-8")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'pretty-prints --form parts whose cont…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"props\\"\\r\\nContent-Type: application/vnd.custom+json\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("{\\"a\\":1}".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'pretty-prints JSON multipart parts al…' 1`] = `
"java.io.ByteArrayOutputStream body = new java.io.ByteArrayOutputStream();
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"file\\"; filename=\\"filename\\"\\r\\nContent-Type: application/octet-stream\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write(java.nio.file.Files.readAllBytes(java.nio.file.Path.of("filename")));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary\\r\\nContent-Disposition: form-data; name=\\"props\\"\\r\\nContent-Type: application/json\\r\\n\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("{\\"name\\":\\"\\",\\"description\\":\\"\\",\\"created_at\\":null}".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
body.write("--scalar-boundary--\\r\\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));

HttpResponse<String> response = Unirest.request("POST", "https://example.com/widget/v1/widgets")
  .header("Content-Type", "multipart/form-data; boundary=scalar-boundary")
  .body(body.toByteArray())
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'quotes a URL whose query string has n…' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com/api?param1=value1&param2=value2")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'returns a POST request' 1`] = `
"HttpResponse<String> response = Unirest.request("POST", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;

exports[`unirest > 'returns a basic request' 1`] = `
"HttpResponse<String> response = Unirest.request("GET", "https://example.com")
  .asString();
System.out.println(response.getBody());"
`;
